<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexDirection="column"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/ic_logo_sgp_foreground" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input_field"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:hint="@string/text_username"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@color/sgp_blue_first"
            android:textColorHint="@color/sgp_blue_hint"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_field"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:hint="@string/text_email_input"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@color/sgp_blue_first"
            android:textColorHint="@color/sgp_blue_hint"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_field"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:hint="@string/text_password_input"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@color/sgp_blue_first"
            android:textColorHint="@color/sgp_blue_hint"
            android:password="true"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:text="@string/title_signup"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_signup_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/sgp_alert_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>