<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gameinf.GameInformationFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexDirection="column"
        tools:ignore="MissingConstraints">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_game_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_game_name"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <TextView
                android:id="@+id/text_game_name_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_rule"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_rule"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <TextView
                android:id="@+id/text_rule_value"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_history"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_history"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <TextView
                android:id="@+id/text_history_value"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

    </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>