<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userinf.UserInformationFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexDirection="column"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/user_icon_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_account_circle_sgp_color_24" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_username"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_username"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input_field"
                android:layout_width="225dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint"
                android:singleLine="true"
                android:enabled="false"
                tools:ignore="MissingConstraints" />

        </com.google.android.flexbox.FlexboxLayout>


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_email_input"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_field"
                android:layout_width="225dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint"
                android:singleLine="true"
                android:enabled="false"
                tools:ignore="MissingConstraints" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_favorite_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_favorite_game"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <TextView
                android:id="@+id/text_favorite_game_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_best_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_best_time"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint" />

            <TextView
                android:id="@+id/text_best_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/sgp_blue_first"
                android:textColorHint="@color/sgp_blue_hint"/>

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>